# WinogradConvolution-CUDA

./: BENCHMARKS.md  CMakeLists.txt  PHASES.md  README.md  main.cu
include/: utils.cuh  winograd_2x2_3x3.cuh  winograd_4x4_3x3.cuh
include/kernels/: winograd_2x2_3x3_ATtA.cuh  winograd_2x2_3x3_BTdB.cuh  winograd_2x2_3x3_GgGT.cuh  winograd_4x4_3x3_ATtA.cuh  winograd_4x4_3x3_BTdB.cuh  winograd_4x4_3x3_GgGT.cuh
